# lab

./: .gitignore  Project.toml  README.md  cuda.py  cuda.sh  environment.yaml  gpt2.py  main_agent.py  pyproject.toml  requirements.txt  sd.py
.scala-build/.bloop/: lab_d5c0a6989e-test.json  lab_d5c0a6989e.json
data/: dummy-output.csv  dummy.csv
data/Neurohacking_data-0.0/: README.csv
data/soloegwg/: soloegwg.csv
src/: agent_tools.py  bfl-flux-1.py  bfl-flux-api-req.py  blip-img-txt.py  csv2sql.py  cuda.py  cv2-sprite-sheet-0.py  cv2-sprite-sheet.py  cv2-test.py  cvae.py  date.py  excel2csv.py  gemini-img3-v2.py  gemini-img3.py  gemini-list-models.py  gemini_agent_app.py  glm.py  glm_vars.py  gml.py  gpt2.py  gpu.py  lab.jl  llm_adapters.py  mj.py  pdf2text.py  pil-rembg.py  plot.py  sana.py  sd-2-1.py  sd-3-medium.py  sd-huggingface-variation.py  sd-huggingface.py  sd.py  skl.py  toDummy.py  util.py  utilTorch.py  vae.py
src/NIfTI/: read.jl
src/dataframes/: read.jl
src/spark/check_gpu/: Dockerfile  build.sh  entrypoint.sh  main_check_gpu.py
src/tf_gpu_test/: Dockerfile  build.sh  main_tf_gpu_test.py  tf-gpu-test.yaml  tf_gpu_test.yaml
